Try excluding "Projects" tag from the index page

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -2,7 +2,7 @@
 	{{pagination}}
 </div>
 
-{{#foreach posts visibility="all"}}
+{{#foreach posts filter="tags:-[Projects]" visibility="all"}}
 
 <article class="{{post_class}}">
 	<div class="inner">
