--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -2,6 +2,7 @@
 	{{pagination}}
 </div>
 
+{{#get "posts" filter="tags:-[Projects]"}}
 {{#foreach posts visibility="all"}}
 
 <article class="{{post_class}}">
@@ -21,5 +22,6 @@
 </article>
 
 {{/foreach}}
+{{/get}}
 
 {{pagination}}
