This time it should work

--- a/index.hbs
+++ b/index.hbs
@@ -24,9 +24,9 @@
 <div id="index" class="container">
 
 	<main class="content" role="main">
-
+{{#get "posts" filter="tags:-[Projects]"}}
 		{{> "loop"}}
-
+{{/get}}
 	</main>
 
 </div>
