--- a/index.hbs
+++ b/index.hbs
@@ -24,9 +24,9 @@
 <div id="index" class="container">
 
 	<main class="content" role="main">
-{{#get "posts" filter="tags:-[Projects]"}}
-		{{> "loop"}}
-{{/get}}
+        {{#get "posts" filter="tags:-[projects]" include="tags,authors"}}
+		    {{> "loop"}}
+        {{/get}}
 	</main>
 
 </div>
